--- a/css/style.css
+++ b/css/style.css
@@ -288,5 +288,17 @@ button {
 
 .question{
     font-size: 1.5em;
-    
+    cursor: pointer;
+}
+
+.answer{
+    display: none;
+}
+
+.symbol h3{
+    display: inline-block;
+    float: left;
+    margin-top: 0.01em!important;
+    margin-bottom: 0;
+    margin-right: 1em;
 }
